--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>nucleo_casa_decor_android</title>
+  <title>Grupo Casa Decor</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
